SSB-178:fixed filter scrollbar issue in mobile

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Catalog/web/css/source/_module.less
@@ -1447,6 +1447,11 @@
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .filter-options-content {
+        .items {
+            max-height: unset !important;
+        }
+    }
     .viewingproducts {
         right:0;
     }
